add disk monitor thread
monitor disk files change.

--- a/FileManager/FileManager.vcproj
+++ b/FileManager/FileManager.vcproj
@@ -178,8 +178,31 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\diskMonitor.cpp"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\diskMonitor.h"
+				>
+			</File>
+			<File
 				RelativePath=".\diskReader.cpp"
 				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\diskReader.h"
@@ -289,6 +312,10 @@
 			</File>
 			<File
 				RelativePath=".\targetver.h"
+				>
+			</File>
+			<File
+				RelativePath=".\ThreadWorker.h"
 				>
 			</File>
 		</Filter>
