update multi select
update multi select combox.

--- a/FileManager/FileManager.vcproj
+++ b/FileManager/FileManager.vcproj
@@ -180,13 +180,6 @@
 			<File
 				RelativePath=".\diskMonitor.cpp"
 				>
-				<FileConfiguration
-					Name="Debug|Win32"
-					>
-					<Tool
-						Name="VCCLCompilerTool"
-					/>
-				</FileConfiguration>
 			</File>
 			<File
 				RelativePath=".\diskMonitor.h"
@@ -197,6 +190,14 @@
 				>
 				<FileConfiguration
 					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
 					ExcludedFromBuild="true"
 					>
 					<Tool
