add file operation record
add file operation record. add select condition parameter name.

--- a/FileManager/FileManager.vcproj
+++ b/FileManager/FileManager.vcproj
@@ -62,7 +62,7 @@
 			<Tool
 				Name="VCLinkerTool"
 				LinkLibraryDependencies="true"
-				AdditionalDependencies="ACEd.lib"
+				AdditionalDependencies="ACEd.lib DbgHelp.lib"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="E:\test_code\ACE\5_6\ACE_wrappers\lib"
 				GenerateDebugInformation="true"
@@ -137,7 +137,7 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="ACE.lib"
+				AdditionalDependencies="ACE.lib DbgHelp.lib"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="E:\test_code\ACE\5_6\ACE_wrappers\lib"
 				GenerateDebugInformation="true"
